--- a/LandingPage.css
+++ b/LandingPage.css
@@ -1,6 +1,7 @@
 html{
     display: flex;
     justify-content: center;
+    overflow-x: hidden;
 }
 *{
     font-family:'Inter', sans-serif;
@@ -108,6 +109,75 @@ html{
     gap: 20px;
     color: black;
 }
+.navigation-dropdown {
+    display: inline-block;
+    margin-bottom: -16px;
+    padding-bottom: 16px;
+    position: relative;
+}
+.navigation-dropdown__popover{
+    opacity: 0;
+    visibility: hidden;
+    background-color: #fff;
+    border: 1px solid #d1d0d3;
+    border-radius: 4px;
+    box-shadow: 0 8px 50px -16px hsla(260,3%,82%,.502);
+    display: flex;
+    min-width: 170px;
+    position: absolute;
+    top: 50px;
+    left: 0px;
+    transition: visibility 0s,opacity .15s ease-in-out;
+    z-index: 1;
+}
+.navigation-dropdown__main{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 24px 16px;
+}
+.navigation-dropdown__categories {
+    -moz-column-break-inside: avoid;
+    break-inside: avoid;
+    display: flex;
+    flex-direction: column;
+    margin: 0 16px;
+    min-width: 170px;
+    page-break-inside: avoid;
+    line-height: 32px;
+}
+.navigation-dropdown__categories--mb {
+    margin-bottom: 24px!important;
+}
+.navigation-dropdown__side-section {
+    background-color: #f6f3fe;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 24px;
+    white-space: normal;
+    line-height: 24px;
+}
+.taskbar_button{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 10px ;
+    gap: 5px;
+}
+.taskbar_icon{
+    opacity: 0;
+}
+.navigation-dropdown:hover .navigation-dropdown__popover {
+    opacity: 1;
+    visibility: visible;
+}
+.navigation-dropdown:hover .taskbar_icon {
+    opacity: 1;
+}
+.navigation-dropdown:hover .opacity {
+    opacity: 1;
+}
 .taskbar_item_right{
     width: max-content;
     display: flex;
@@ -180,11 +250,20 @@ html{
     width: 100vw;
     background-image: url("https://about.gitlab.com/nuxt-images/home/gradient.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: 100% 0;
+    background-size: 100% 1200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: -1;
+}
+@media (max-width:575px) {
+    .container{
+        background-position: top;
+        background-size: 300% 1200px;
+    }
+    
 }
 .slide_container{
     width: 100vw;
@@ -215,6 +294,13 @@ html{
     color: black;
     gap: 20px;
     /* overflow-wrap: none; */
+}
+.trans{
+    transition-duration: 0.5s;
+}
+.trans:hover{
+    transform: translate(0px,-10px);
+    transition-duration: 0.25s;
 }
 .slide_item_card{
     background: linear-gradient(176deg,hsla(0,0%,100%,.75),hsla(0,0%,100%,.4));
@@ -280,7 +366,7 @@ html{
     padding: auto;
 }
 .logo_container{
-    max-width: 1024px;
+    max-width: 1170px;
     display: flex;
     /* padding: 24px 55px 0px 55px; */
     justify-content: center;
@@ -315,16 +401,17 @@ html{
     align-items: center;
     padding-left: 16px;
     padding-right: 16px;
+    background: linear-gradient(0deg,#fff,#fff 24.59%,hsla(0,0%,100%,0));
 }
 .intro_container{
-    max-width: 1024px;
+    max-width: 1170px;
     display: flex;
     width: 100%;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .intro_item{
-    width: 50%;
+    width: 45%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -362,11 +449,14 @@ html{
         display: flex;
         justify-content: center;
     }
+    .intro_block{
+        align-items: normal;
+    }
     
 }
 .blurb{
     width: 100%;
-    max-width: 1024px;
+    max-width: 1170px;
     margin-top: 64px;
     margin-bottom: 160px;
     padding-left: 16px;
@@ -392,7 +482,7 @@ html{
 .feature_showcare{
     width: 100%;
     display: flex;
-    max-width: 1024px;
+    max-width: 1170px;
     margin: 0px 16px 0px 16px;
     position: relative;
     gap: 20px;
@@ -477,7 +567,7 @@ html{
 }
 .tabbed_features_container{
     width: 100%;
-    max-width: 1024px;
+    max-width: 1170px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 16px;
@@ -509,10 +599,17 @@ html{
     color: #a989f5;
 }
 .tabbed_features_tabs{
+    width: 100%;
     padding: 64px 0px 64px 0px;
     display: flex;
     gap: 24px;
     color: white;
+}
+.tabbed_features_tabs_p{
+    display: block;
+}
+.tabbed_features_tabs_p2{
+    display: none;
 }
 .tabbed_features_button{
     background-color: #45424d;
@@ -523,10 +620,25 @@ html{
     padding: 8px 24px 8px 24px;
     border-radius: 90px;
 }
+@media (max-width:767px) {
+    .tabbed_features_tabs_p{
+        display: none;
+    }
+    .tabbed_features_tabs_p2{
+        display: block;
+    }
+    .tabbed_features_button{
+        width: 30%;
+    }
+}
 .tabbed_features_content{
     padding-top: 16px;
     display: flex;
     gap: 32px;
+}
+.row{
+    color: white !important;
+    background-color: #7759c2 !important;
 }
 .tabbed_features_content_left{
     width: 50%;
@@ -536,6 +648,7 @@ html{
 }
 .tabbed_features_box{
     display: flex;
+    align-items: center;
     width: 100%;
     gap: 16px;
 }
@@ -548,9 +661,10 @@ html{
 }
 .tab_menu{
     width: 100%;
-    padding: 8px 16px 0px 0px;
+    padding: 8px 16px 0px 16px;
     display: flex;
     background-color: #f2f1f5;
+    overflow: scroll;
 }
 .tab_menu_item{
     display: flex;
@@ -563,6 +677,7 @@ html{
 .code{
     display: flex;
     width: 100%;
+    min-height: 320px;
     padding: 4px;
     border-radius: 4px;
     background-color: #241F32;
@@ -573,6 +688,18 @@ html{
     position: relative;
     line-height: 24px;
 }
+pre{
+    animation: fadeIn 0.5s ease forwards;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0; 
+    }
+    to {
+        opacity: 1; 
+    }
+}
+
 .line_container{
     padding: 16px 0px 16px 0px;
     position: relative;
@@ -592,6 +719,9 @@ html{
     .tabbed_features_content_left{
         width: 100%;
     }
+    .tabbed_features_content_right{
+        width: 100%;
+    }
 }
 .tabbed_case_studies{
     width: 100vw;
@@ -599,24 +729,41 @@ html{
     justify-content: center;
     padding-left: 16px;
     padding-right: 16px;
-    margin: 96px 0px 96px 0px;
+    background-color: white;
 }
 .tabbed_case_studies_container{
     width: 100%;
-    max-width: 1024px;
+    max-width: 1170px;
+    position: relative;
+    padding:  96px 0px 96px 0px;;
 }
 .tabbed_case_studies_list{
     width: 100%;
     overflow: scroll;
     display: flex;
-    justify-content: space-between;
+    gap: 32px;
     align-items: center;
     margin-bottom: 64px;
+}
+.tabbed_case_studies_list::-webkit-scrollbar{
+    display: none;
 }
 .tabbed_case_studies_row{
     width: 100%;
     display: flex;
     gap: 32px;
+    position: relative;
+    animation: fade-in-7ba06247 .5s ease-in forwards;
+}
+@keyframes fade-in-7ba06247 {
+    from {
+        top:20px;
+        opacity: 0; /* Bắt đầu từ độ trong suốt 0 */
+    }
+    to {
+        top:0px;
+        opacity: 1; /* Kết thúc với độ trong suốt 1 */
+    }
 }
 .tabbed_case_studies_row_item{
     width: 50%;
@@ -675,6 +822,20 @@ html{
     right: -40px;
     width: 154px;
 }
+.tabbed_case_studies_button{
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    width: max-content;
+    border: none;
+    gap: 24px;
+}
+.tabbed_case_studies_button_line{
+    width:0px;
+    height: 4px;
+    background-color: #7759c2;
+    transition-duration: 0.5s;
+}
 @media (max-width:768px) {
     .tabbed_case_studies_row{
         flex-wrap: wrap;
@@ -682,6 +843,350 @@ html{
     .tabbed_case_studies_row_item{
         width: 100%;
     
+    }
+    
+}
+.recognition-spotlight{
+    width: 100vw;
+    background-repeat: no-repeat;
+    background-image: url(https://about.gitlab.com/nuxt-images/home/bottom-gradient.png);
+    background-size: 200% 100%;
+    position: relative;
+    z-index: 0;
+    display: flex;
+    justify-content: center; 
+}
+.recognition-spotlight:before {
+    background: linear-gradient(1turn,#fff,hsla(0,0%,100%,.75) 24.94%,hsla(0,0%,100%,0));
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: -1px;
+    transform: scale(-1);
+    width: 100%;
+    z-index: -1;
+}
+
+.recognition-spotlight_container{
+    width: 100%;
+    max-width: 1170px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-bottom: 160px;
+}
+.recognition-spotlight_row{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 96px;
+}
+.recognition-spotlight_row_item{
+    width: 45%;
+    display: flex;
+    gap: 60px;
+}
+.recognition-spotlight__wrapper{
+    display: flex;
+    gap: 16px;
+    flex-wrap: wrap;
+}
+.recognition-spotlight__wrapper_item1{
+    align-items: flex-start;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+.recognition-spotlight__wrapper_item2{
+    max-width: 690px;
+    align-items: flex-start;
+    background: #fff;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+    padding: 32px;
+    justify-content: space-between;
+    flex: 2;
+}
+.orderImg{
+    order: 2;
+}
+.orderLink{
+    order: 3;
+}
+.recognition-spotlight__wrapper_card{
+    height: 50%;
+    align-items: flex-start;
+    background: #fff;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 16px;
+    padding: 32px;
+    justify-content: space-between;
+}
+.recognition-spotlight__badges{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 32px;
+    gap: 42px;
+}
+.recognition-spotlight__badges_img{
+    width: 96px;
+}
+@media (max-width:767px) {
+    .recognition-spotlight_row{
+        flex-wrap: wrap;
+    }
+    .recognition-spotlight_row_item{
+        width: 100%;
+    }
+    .recognition-spotlight__wrapper_item1{
+        flex: none;
+        width: 100%;
+    }
+    .recognition-spotlight__wrapper_item2{
+        flex: none;
+        width: 100%;
+    }
+    .orderImg{
+        order: 3 !important;
+    }
+    .orderLink{
+        order: 2 !important;
+    }
+    .recognition-spotlight__badges{
+        margin-top: 10px;
+        margin-bottom: 0px;
+        gap: 0px;
+    }
+    .recognition-spotlight__badges_img{
+        width: 76px;
+    }
+}
+.next_step_alt{
+    width: 100vw;
+    background-color: #171321;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+.next_step_alt_container{
+    width: 100%;
+    max-width: 1170px;
+    background-color: #171321;
+    color: white;
+    position: relative;
+    border: 1px solid #45424d;
+    border-radius: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    line-height: 24px;
+    top: -96px;
+}
+.next_step_alt_item_left{
+    width: 50%;
+    padding: 64px 0px 64px 64px;
+}
+.next_step_alt_item_right{
+    display: flex;
+    width: 50%;
+    padding: 64px 64px 64px 0px;
+    gap: 20px;
+}
+.next_step_alt_header{
+    -webkit-text-fill-color: transparent;
+    background: linear-gradient(91.08deg,#feb484 1.97%,#a686f2 27.88%,#592ac8 65.98%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    max-width: 480px;
+    font-weight: 600;
+    font-size: 32px;
+    letter-spacing: -1px;
+    line-height: 48px;
+}
+.next_step_alt_button{
+    margin-top: 10px;
+    display: flex;
+    width: max-content;
+    height: 44px;
+    color: black !important;
+    background-color: white;
+    padding: 11px 16px 11px 16px;
+    border-radius: 4px;
+    text-decoration: none;
+    border: 1px solid black;
+}
+.next-step-alt__col-cta{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+@media (max-width:767px) {
+    .next_step_alt_item_left{
+        width: 100%;
+        padding-bottom: 20px;
+    }
+    .next_step_alt_item_right{
+        width: 100%;
+        flex-wrap: wrap;
+        padding: 0px 64px 64px 64px;
+    }
+    .next-step-alt__col-cta{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+@media (max-width:575px) {
+    .next_step_alt_item_left{
+        padding: 32px 24px 20px 24px;
+    }
+    .next_step_alt_item_right{
+        width: 100%;
+        flex-wrap: wrap;
+        padding: 0px 24px 32px 24px;
+    }
+    .next-step-alt__col-cta{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+.footer{
+    width: 100vw;
+    background-color: #171321;
+    color: white;
+    display: flex;
+    justify-content: center;
+}
+.footer_container{
+    width: 100%;
+    max-width: 1170px;
+    padding: 40px 16px 40px 16px;
+    line-height: 32px;
+}
+.footer_navigation{
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between
+}
+.footer_navigation_logo{
+    flex: 1;
+    display: flex;
+}
+.footer_navigation_content{
+    flex: 5;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: space-between;
+}
+.content_container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: space-between;
+}
+.column_nested{
+    max-width: 160px;
+    display: flex;
+    flex-direction: column;
+}
+.column-wrapper{
+    margin-top: 24px;
+}
+.footer_cta{
+    display: flex;
+    flex-direction: column;
+    padding-top: 96px;
+}
+.footer__selectors{
+    align-items: baseline;
+    border-bottom: 1px solid #fff;
+    display: flex;
+    margin-bottom: 32px;
+    padding-bottom: 24px;
+    justify-content: space-between;
+}
+.language-selector{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.social__links{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.social__links_icon{
+    width: 24px;
+    color: white;
+}
+.social__links_icon:hover{
+    color: #7759c2;
+}
+.source{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.source_link{
+    display: flex;
+    text-decoration:underline;
+    color: white;
+    gap: 10px;
+}
+.column-link{
+    display: block;
+}
+@media (max-width: 1220px){
+    .footer_navigation {
+        flex-direction:column
+    }
+    .footer_navigation_logo{
+        margin-bottom: 48px;
+    }
+}
+@media (max-width:767px) {
+    .column-wrapper{
+        margin-top: 0px;
+    }
+    .footer_navigation_content{
+        width: 100%;
+        flex-direction: column;
+    }
+    .column_nested{
+        width: 100%;
+        max-width:none;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .column-link{
+        display: flex;
+        justify-content: space-between;
+        padding-right: 200px;
+    }
+    .footer__selectors{
+        flex-direction: column;
+        gap: 20px;
+    }
+    #nested1{
+        width: 100%;
+        max-width:none;
+        display: flex;
+        padding-right:100px ;
+        flex-direction: row;
+        justify-content: space-between;
     }
     
 }
@@ -724,6 +1229,12 @@ html{
 .size24{
     font-size: 24px;
 }
+.size28{
+    font-size: 28px;
+}
+.size32{
+    font-size: 32px;
+}
 .size40{
     font-size: 40px;
 }
@@ -745,6 +1256,9 @@ html{
 .background_pup{
     background-color: #7759c2;
     color: white;
+}
+.background_white{
+    background-color: white !important;
 }
 .button{
     display: flex;
