--- a/LandingPage.css
+++ b/LandingPage.css
@@ -981,6 +981,12 @@ pre{
         width: 76px;
     }
 }
+@media (max-width:470px){
+    #row_item2{
+        display: flex;
+        flex-direction: column;
+    }
+}
 .next_step_alt{
     width: 100vw;
     background-color: #171321;
